<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="label_dialog_alarm_permission_ok">@android:string/ok</string>
    <string name="label_dialog_alarm_permission_title">Alarms disabled</string>
    <string name="text_dialog_alarm_permission_message">The app does not have the permission to set alarms and reminders. This is necessary for scheduling network tasks. Please grant the alarm permission in the Android settings. The app will not work without it.</string>

</resources>